--- a/projectsjava/nbproject/project.properties
+++ b/projectsjava/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.jar=${dist.dir}/projectsjava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.2.2.jar=C:\\Users\\truon\\Desktop\\gson-2.2.2.jar
 file.reference.json-simple-1.1.jar=src\\filejar\\json-simple-1.1.jar
 file.reference.sqljdbc4.jar=src\\filejar\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.gson-2.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projectsjava.Projectsjava
+main.class=Frame.formchinh
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
