--- a/projectsjava/nbproject/project.properties
+++ b/projectsjava/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.2.2.jar=C:\\Users\\truon\\Desktop\\gson-2.2.2.jar
+file.reference.gson-2.2.2.jar-1=E:\\gson-2.2.2.jar
 file.reference.json-simple-1.1.jar=src\\filejar\\json-simple-1.1.jar
 file.reference.sqljdbc4.jar=src\\filejar\\sqljdbc4.jar
 includes=**
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.gson-2.2.2.jar}
+    ${file.reference.gson-2.2.2.jar}:\
+    ${file.reference.gson-2.2.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
