update form danh bạ

--- a/projectsjava/nbproject/project.properties
+++ b/projectsjava/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.gson-2.2.2.jar=C:\\Users\\truon\\Desktop\\gson-2.2.2.jar
 file.reference.gson-2.2.2.jar-1=E:\\gson-2.2.2.jar
+file.reference.gson-2.2.2.jar-2=src\\filejar\\gson-2.2.2.jar
 file.reference.json-simple-1.1.jar=src\\filejar\\json-simple-1.1.jar
 file.reference.sqljdbc4.jar=src\\filejar\\sqljdbc4.jar
 includes=**
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.jar}:\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.gson-2.2.2.jar}:\
-    ${file.reference.gson-2.2.2.jar-1}
+    ${file.reference.gson-2.2.2.jar-1}:\
+    ${file.reference.gson-2.2.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
